--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body bgcolor="silver">
 
+	<p align="center"> <font size="4" face="Arial"> Co to jest <u>walidacja</u>? </font> </p>
+	<p align="center"> <font size="4" face="Arial"> Walidacja proces weryfikacji strony internetowej pod kątem ewentualnych błędów występujących w jej budowie. </font> </p>
+
 	<h1>Ksawery_Zych_2G(grupa 2:Podstawowa struktura dokumentu HTML) (Numer w dzienniku 33)</h1> <br>
 		<p align="right"> <font color="blue" size="7" face="Arial"> Ksawery </font> </p> <br>
 		<p align="right"> <font color="red" size="6" face="Courier New"> Ksawery </font> </p> <br>
